--- a/index.html
+++ b/index.html
@@ -2357,7 +2357,9 @@ button:hover{background:#1e293b;}
               { path:"/desktop", name:"Readme.md", type:"file", ext:".md", content:"# Readme\n\nThis is a markdown file in /desktop."},
               { path:"/desktop", name:"SampleApp.exe", type:"file", ext:".exe", content:"(Unsupported type or Binary)", exePayloadBase64 },
               { path:"/documents", name:"Session.log", type:"file", ext:".log", content:"Session started.\nUser created.\nExplorer, Notepad, Browser, and Host.exe online."},
-              { path:"/recommended-files", name:"Roadmap.txt", type:"file", ext:".txt", content:"Future ideas:\n- More exe payloads\n- FS folders\n- Richer AIM behaviors" }
+              { path:"/recommended-files", name:"win12PreviewPlans.txt", type:"file", ext:".txt", content:"Ideas: \n make url tjy-gitnub.github.io/win12/desktop.html \n make AIM preview \n avoid simulator requests ex: \n File:/// localstorage for FS and much much more" },
+              { path:"/recommended-files", name:"RecommendedFS.txt", type:"file", ext:".txt", content:"Most of us started as a coca cola employ and I and most of us like coca cola so yeah It will be coca cola plans." },
+              { path:"/recommended-files", name:"win12PreviewFinal.html", type:"file", ext:".html", content:"<iframe src="https://tjy-gitnub.github.io/win12/desktop.html"></iframe>" }
             ],
             regAssociations:{
               ".txt":"notepad",
@@ -2409,9 +2411,11 @@ button:hover{background:#1e293b;}
           themeCss:"",
           fs:[{ path:"/desktop", name:"Welcome.txt", type:"file", ext:".txt", content:"Hello from the Win12 AIM relic.\n\nThis is your desktop Welcome.txt file."},
               { path:"/desktop", name:"Readme.md", type:"file", ext:".md", content:"# Readme\n\nThis is a markdown file in /desktop."},
-              { path:"/desktop", name:"SampleApp.exe", type:"file", ext:".exe", content:"(Unsupported type or Binary)", exePayloadBase64},
+              { path:"/desktop", name:"SampleApp.exe", type:"file", ext:".exe", content:"(Unsupported type or Binary)"},
               { path:"/documents", name:"Session.log", type:"file", ext:".log", content:"Session started.\nUser created.\nExplorer, Notepad, Browser, and Host.exe online."},
-              { path:"/recommended-files", name:"Roadmap.txt", type:"file", ext:".txt", content:"Future ideas:\n- More exe payloads\n- Users requests" }],
+              { path:"/recommended-files", name:"win12PreviewPlans.txt", type:"file", ext:".txt", content:"Ideas: \n make url tjy-gitnub.github.io/win12/desktop.html \n make AIM preview \n avoid simulator requests ex: \n File:/// localstorage for FS and much much more" },
+              { path:"/recommended-files", name:"RecommendedFS.txt", type:"file", ext:".txt", content:"Most of us started as a coca cola employ and I and most of us like coca cola so yeah It will be coca cola plans." },
+              { path:"/recommended-files", name:"win12PreviewFinal.html", type:"file", ext:".html", content:"<iframe src="https://tjy-gitnub.github.io/win12/desktop.html"></iframe>" }],
           regAssociations:{
               ".txt":"notepad",
               ".md":"notepad",
