--- a/index.html
+++ b/index.html
@@ -2359,7 +2359,7 @@ button:hover{background:#1e293b;}
               { path:"/documents", name:"Session.log", type:"file", ext:".log", content:"Session started.\nUser created.\nExplorer, Notepad, Browser, and Host.exe online."},
               { path:"/recommended-files", name:"win12PreviewPlans.txt", type:"file", ext:".txt", content:"Ideas: \n make url tjy-gitnub.github.io/win12/desktop.html \n make AIM preview \n avoid simulator requests ex: \n File:/// localstorage for FS and much much more" },
               { path:"/recommended-files", name:"RecommendedFS.txt", type:"file", ext:".txt", content:"Most of us started as a coca cola employ and I and most of us like coca cola so yeah It will be coca cola plans." },
-              { path:"/recommended-files", name:"win12PreviewFinal.html", type:"file", ext:".html", content:"<iframe src="https://tjy-gitnub.github.io/win12/desktop.html"></iframe>" }
+              { path:"/recommended-files", name:"win12PreviewFinal.html", type:"file", ext:".html", content:"<iframe src=https://tjy-gitnub.github.io/win12/desktop.html></iframe>" }
             ],
             regAssociations:{
               ".txt":"notepad",
@@ -2415,7 +2415,7 @@ button:hover{background:#1e293b;}
               { path:"/documents", name:"Session.log", type:"file", ext:".log", content:"Session started.\nUser created.\nExplorer, Notepad, Browser, and Host.exe online."},
               { path:"/recommended-files", name:"win12PreviewPlans.txt", type:"file", ext:".txt", content:"Ideas: \n make url tjy-gitnub.github.io/win12/desktop.html \n make AIM preview \n avoid simulator requests ex: \n File:/// localstorage for FS and much much more" },
               { path:"/recommended-files", name:"RecommendedFS.txt", type:"file", ext:".txt", content:"Most of us started as a coca cola employ and I and most of us like coca cola so yeah It will be coca cola plans." },
-              { path:"/recommended-files", name:"win12PreviewFinal.html", type:"file", ext:".html", content:"<iframe src="https://tjy-gitnub.github.io/win12/desktop.html"></iframe>" }],
+              { path:"/recommended-files", name:"win12PreviewFinal.html", type:"file", ext:".html", content:"<iframe src=https://tjy-gitnub.github.io/win12/desktop.html></iframe>" }],
           regAssociations:{
               ".txt":"notepad",
               ".md":"notepad",
